--- a/lesson 32/index.html
+++ b/lesson 32/index.html
@@ -7,45 +7,26 @@
 </head>
 <body>
     <input type="text" id="input_id">
-    <button id="btn_1">Show</button>
-    <h1 id="teksti_id"></h1>
-    
-
-    <p id="results1"></p>
-
-    <p id="results2"></p>
-
-    <p id="results3"></p>
-
-    <p id="results4"></p>
-
-    <p id="results5"></p>
-
-    <p id="results6"></p>
-
-    <p id="results7"></p>
-
-    <p id="results8"></p>
-
-    <p id="results9"></p>
-
-    <p id="results10"></p>
-
-    <p id="results11"></p>
-
-    <p id="results12"></p>
-
-    <p id="results13"></p>
-
-    <p id="results14"></p>
-
-    <p id="results15"></p>
-
-    <p id="results16"></p>
-
-    <p id="results17"></p>
-
-    <p id="results18"></p>
-    <script src="js/main.js"></script>
+        <button id="btn_id">Show</button>
+        <h1 id="teksti_id"></h1>
+        <p id="result1"></p>
+        <p id="result2"></p>
+        <p id="result3"></p>
+        <p id="result4"></p>
+        <p id="result5"></p>
+        <p id="result6"></p>
+        <p id="result7"></p>
+        <p id="result8"></p>
+        <p id="result9"></p>
+        <p id="result10"></p>
+        <p id="result11"></p>
+        <p id="result12"></p>
+        <p id="result13"></p>
+        <p id="result14"></p>
+        <p id="result15"></p>
+        <p id="result16"></p>
+        <p id="result17"></p>
+        <p id="result18"></p>
+        <script src="js/main.js"></script>
 </body>
 </html>
