--- a/perseritje/index.html
+++ b/perseritje/index.html
@@ -1,8 +1,12 @@
 <html>
 	<head>
 		<title>Perseritje</title>
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+
+		<button id="btn1">Click</button>
+		<h1 id="text">DigitalSchool</h1>
 
 
 		<script>
